# CaDP-assignment-2

./: .gitignore  CMakeLists.txt  Makefile  densematgen.c  densematgen.h  matrixmul.c  matrixmul.cpp
algorithms/: ColAAlgorithm.cpp  ColAAlgorithm.h  GenericMultiplicationAlgorithm.cpp  GenericMultiplicationAlgorithm.h  InnerABCAlgorithm.cpp  InnerABCAlgorithm.h
utility/: DenseMatrixFragment.cpp  DenseMatrixFragment.h  MatrixFragment.cpp  MatrixFragment.h  MatrixFragmentDescriptor.cpp  MatrixFragmentDescriptor.h  MatrixOperations.cpp  MatrixOperations.h  SparseMatrix.cpp  SparseMatrix.h  SparseMatrixFragment.cpp  SparseMatrixFragment.h  logging.h
